--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -3,10 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <link rel="stylesheet" href="/signin.css">
     <title>Signin</title>
 </head>
 <body>
-   
+
+    <main >
+        <form action="/login" method="get">
+            <fieldset>
+                <div class="textbox1">
+                    <h1>Login</h1>
+
+                    <p>It's quick and easy.</p>
+                </div>  
+
+                <div style="margin-top: 20px;" class="emailpasswordbox">
+
+                    <input  type="email number" placeholder="Mobile number or Email" id="email" required ="" name="email"> <br> <br>
+
+                    <input type="password" placeholder="Enter password" id="password" name="password" required="">
+
+                </div>
+
+                <div class="btnbox">
+                    <button class="signin" type="submit">Signin</button>
+                </div>
+            </fieldset>
+        </form>
+    </main>
+
 </body>
 </html>
