--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,8 @@
+body{
+    background-image: url(images/color\ background\ 001.jpg);
+    background-position:100%;
+    background-size: 100%;
+}
 
 main{  
     padding: 5px 0px;
@@ -6,7 +11,6 @@ main{
    
      
 }
-
 
 fieldset{
     border-radius: 10px;
@@ -20,17 +24,18 @@ fieldset{
     text-align: center;
 }
 
-
 .textbox1{
     border-bottom: 2px solid #ff915b;
      padding-bottom: 5px;
      color: whitesmoke;
  
 }
+
 .textbox1 h1{
    /* text-align: start;  */
    font-size: 30px;
 }
+
 .textbox1 p{
 /* text-align: start; */
 font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -68,18 +73,22 @@ input{
 #country{
     width: 85%;
 }
+
 #state{
     width: 85%;
 }
+
 #city{
     width: 85%;
 }
+
 label{
     font-size: 14px;
     color: whitesmoke;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 500;
 }
+
 .dobgenderbox{
     display: flex;
      gap: 30px;
@@ -99,6 +108,7 @@ label{
     border:2px solid green;
 
 }
+
 .textbox2{
     font-size: 12px; 
     margin-top: 20px;
@@ -110,7 +120,6 @@ label{
 .textbox2 p a{
     color: red;
 }
-
 
 .signup{
     text-align: center;
