--- a/public/signin.css
+++ b/public/signin.css
@@ -1,12 +1,14 @@
 body{
     background-image: url(images/color\ background\ 001.jpg);
     background-position:100%; 
-    background-size: 100%;
+    background-size: cover;
+    overflow-y: hidden;
     background-repeat: no-repeat;
+    height: 100%;
 }
 
 main{  
-    padding: 5px 0px;
+    padding: 50px 0px;
     width:100%;
     height: 90vh;
    
@@ -16,13 +18,12 @@ main{
 fieldset{
     border-radius: 10px;
     padding: 0px 20px 20px 15px;
-    width: 25%;
+    width: 50%;
     height: fit-content;
     border: 5px solid #ff915b;
-    background-size: 100%;
-    background-position: 100%;
     margin: auto;
     text-align: center;
+    padding: auto;
 }
 
 .textbox1{
