--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,7 +32,7 @@
                         
                     <div style="margin-top: 20px;" class="emailpasswordbox">
 
-                        <input  type="email number" placeholder="Mobile number or Email" id="email" required ="" name="email"> <br> <br>
+                        <input  type="email" placeholder="Enter a valid email" id="email"   name="email"> <br> <br>
 
                         <input type="password" placeholder="New password" id="password" name="password" required="">
 
