--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -9,7 +9,7 @@
 <body>
 
     <main >
-        <form action="/login" method="get">
+        <form action="/login" method="post">
             <fieldset>
                 <div class="textbox1">
                     <h1>Login</h1>
